<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#9AAAF0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00851D1D"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv01"
                android:layout_width="match_parent"
                android:layout_height="118dp"
                android:text="@string/alumnado_con_necesidades_espec_ficas"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FF8F00"
                android:onClick="goActiv_2"
                android:text="@string/neae"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FF8F00"
                android:onClick="goActiv_3"
                android:text="@string/alumnado_con_necesidades_espec_ficas"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FF8F00"
                android:onClick="goActivi_4"
                android:text="@string/tgd"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FF8F00"
                android:text="@string/neae_tdah"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FF8F00"
                android:text="@string/neae_dea"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FF8F00"
                android:text="@string/neae_ecophe"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FF8F00"
                android:text="@string/neae_intarse"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FF8F00"
                android:text="@string/neae_alcain"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FF8F00"
                android:text="@string/notas_aclaratorias_para_la_planificaci_n"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FF8F00"
                android:text="@string/alteraciones_en_el_ambito_de_la_comunicaci_n_y_el_lenguaje"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>